# pcb-vision-graph

./: .gitignore  README.md  make_blank_board.py  pyproject.toml
scripts/: eval_pads_overlay_v1.py  eval_pads_v1.py  featurize_scene_v1.py  make_component_v1.py  make_component_with_pad_v1.py  make_dataset_v1.py  make_scene_v1.py  try_import.py
src/pcb_partgraph/: __init__.py
src/pcb_partgraph/detect/: __init__.py  pads.py
src/pcb_partgraph/gnn/: featurize.py
